--- a/gallery2.html
+++ b/gallery2.html
@@ -83,7 +83,7 @@
 
 
 		<!-- Section heading -->
-		<h3 class="font-weight-bold mt-5 pb-2 text-center">White Roses</h3>
+		<h3 class="font-weight-bold mt-5 pb-2 text-center">White & Cream</h3>
 
 		<!-- classic gallery -->
 		<div class="gallery__page">
@@ -226,7 +226,7 @@
 					<h6 class="text-uppercase font-weight-bold"> Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 					<p><a href="gallery1.html">Red & Coral</a></p>
-					<p><a href="gallery2.html">White Roses</a></p>
+					<p><a href="gallery2.html">White & Cream</a></p>
 					<p><a href="gallery3.html">Pink & Hot Pink</a></p>
 					<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
 
