--- a/gallery8.html
+++ b/gallery8.html
@@ -61,12 +61,12 @@
 					<li><a href="./gallery.html" class="menu--active">Gallery</a>
 						<ul class="sub__menu">
 							<li><a href="./gallery1.html"> • Red & Coral</a></li>
-							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery2.html"> • White & Cream</a></li>
 							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
 							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
 							<li><a href="./gallery5.html"> • Green</a></li>
 							<li><a href="./gallery6.html"> • Lavender</a></li>
-							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery7.html"> • Bicolor & Novelty</a></li>
 							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
@@ -313,7 +313,7 @@
 					<h6 class="text-uppercase font-weight-bold"> Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 					<p><a href="gallery1.html">Red & Coral</a></p>
-					<p><a href="gallery2.html">White Roses</a></p>
+					<p><a href="gallery2.html">White & Cream</a></p>
 					<p><a href="gallery3.html">Pink & Hot Pink</a></p>
 					<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
 
