--- a/gallery1.html
+++ b/gallery1.html
@@ -102,27 +102,7 @@
 					</a>
 				</div>
 
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/new_face.png"
-						data-fresco-group="gallery">
-						<img src="img/gallery/yellow/new_face.png" alt="orange_crush">
-						<div class="blog__content text-white mb-5">
-							<h3> • New Face</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/bromo.png"
-						data-fresco-group="gallery">
-						<img src="img/gallery/yellow/bromo.png" alt="bromo">
-						<div class="blog__content text-white mb-5">
-							<h3> • Bromo</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-lg-6 col-md-4 col-sm-6">
 					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/coral.png" data-fresco-group="gallery">
 						<img src="img/gallery/red/coral.png" alt="coral reef">
 						<div class="blog__content text-white mb-5">
@@ -131,35 +111,6 @@
 					</a>
 				</div>
 
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/carpe_diem.png"
-						data-fresco-group="gallery">
-						<img src="img/gallery/yellow/carpe_diem.png" alt="carpe diem">
-						<div class="blog__content text-white mb-5">
-							<h3> • Carpe Diem</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/tiffany.jpg"
-						data-fresco-group="gallery">
-						<img src="img/gallery/yellow/tiffany.jpg" alt="Tiffany">
-						<div class="blog__content text-white mb-5">
-							<h3> • Tiffany</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/shimmer.png"
-						data-fresco-group="gallery">
-						<img src="img/gallery/yellow/shimmer.png" alt="shimmer">
-						<div class="blog__content text-white mb-5">
-							<h3> • Shimmer</h3>
-						</div>
-					</a>
-				</div>
 
 			</div>
 		</div>
@@ -229,7 +180,7 @@
 				<h6 class="text-uppercase font-weight-bold"> Products</h6>
 				<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 				<p><a href="gallery1.html">Red & Coral</a></p>
-				<p><a href="gallery2.html">White Roses</a></p>
+				<p><a href="gallery2.html">White & Cream</a></p>
 				<p><a href="gallery3.html">Pink & Hot Pink</a></p>
 				<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
 
