--- a/gallery4.html
+++ b/gallery4.html
@@ -83,7 +83,7 @@
 
 
 		<!-- Section heading -->
-		<h3 class="font-weight-bold mt-5 pb-2 text-center"> Yellow & Orange</h3>
+		<h3 class="font-weight-bold mt-5 pb-2 text-center"> Yellow - Orange & Peach</h3>
 
 		<!-- classic gallery -->
 		<div class="gallery__page">
@@ -130,7 +130,7 @@
 						</a>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-sm-6">
+					<div class="col-lg-4 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/yellow_bikini.jpg"
 							data-fresco-group="gallery">
 							<img src="img/gallery/yellow/yellow_bikini.jpg" alt="yellow_bikini">
@@ -140,7 +140,7 @@
 						</a>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-sm-6">
+					<div class="col-lg-4 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/tycoon.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/yellow/tycoon.png" alt="tycoon">
@@ -150,7 +150,7 @@
 						</a>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-sm-6">
+					<div class="col-lg-4 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/copacabana.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/yellow/copacabana.png" alt="copacabana">
@@ -160,12 +160,62 @@
 						</a>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-sm-6">
+					<div class="col-lg-4 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/orange_crush.jpg"
 							data-fresco-group="gallery">
 							<img src="img/gallery/yellow/orange_crush.jpg" alt="orange_crush">
 							<div class="blog__content text-white mb-5">
 								<h3> • Orange Crush</h3>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/new_face.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/yellow/new_face.png" alt="orange_crush">
+							<div class="blog__content text-white mb-5">
+								<h3> • New Face</h3>
+							</div>
+						</a>
+					</div>
+	
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/bromo.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/yellow/bromo.png" alt="bromo">
+							<div class="blog__content text-white mb-5">
+								<h3> • Bromo</h3>
+							</div>
+						</a>
+					</div>
+	
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/carpe_diem.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/yellow/carpe_diem.png" alt="carpe diem">
+							<div class="blog__content text-white mb-5">
+								<h3> • Carpe Diem</h3>
+							</div>
+						</a>
+					</div>
+	
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/tiffany.jpg"
+							data-fresco-group="gallery">
+							<img src="img/gallery/yellow/tiffany.jpg" alt="Tiffany">
+							<div class="blog__content text-white mb-5">
+								<h3> • Tiffany</h3>
+							</div>
+						</a>
+					</div>
+	
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/shimmer.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/yellow/shimmer.png" alt="shimmer">
+							<div class="blog__content text-white mb-5">
+								<h3> • Shimmer</h3>
 							</div>
 						</a>
 					</div>
@@ -239,7 +289,7 @@
 					<h6 class="text-uppercase font-weight-bold"> Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 					<p><a href="gallery1.html">Red & Coral</a></p>
-					<p><a href="gallery2.html">White Roses</a></p>
+					<p><a href="gallery2.html">White & Cream</a></p>
 					<p><a href="gallery3.html">Pink & Hot Pink</a></p>
 					<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
 
