--- a/gallery6.html
+++ b/gallery6.html
@@ -89,16 +89,16 @@
 			<div class="gallery__warp">
 				<div class="row">
 
-					<div class="col-lg-4 col-md-4 col-sm-6">
+					<div class="col-lg-3 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/cool.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/lavender/cool.png" alt="Cool">
 							<div class="blog__content text-white mb-5">
-								<h3> • Cool</h3>
+								<h3> • Cool Water</h3>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6">
+					<div class="col-lg-3 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/deep_purple.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/lavender/deep_purple.png" alt="deep-purple">
@@ -107,7 +107,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6">
+					<div class="col-lg-3 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/moody_blues.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/lavender/moody_blues.png" alt="Moody Blues">
@@ -116,6 +116,16 @@
 							</div>
 						</a>
 					</div>
+
+					<div class="col-lg-3 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/deep_silver.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/lavender/deep_silver.png" alt="Deep Silver">
+							<div class="blog__content text-white mb-5">
+								<h3> • Deep Silver</h3>
+							</div>
+						</a>
+					</div>				
 
 					
 				</div>
@@ -186,7 +196,7 @@
 					<h6 class="text-uppercase font-weight-bold"> Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 					<p><a href="gallery1.html">Red & Coral</a></p>
-					<p><a href="gallery2.html">White Roses</a></p>
+					<p><a href="gallery2.html">White & Cream</a></p>
 					<p><a href="gallery3.html">Pink & Hot Pink</a></p>
 					<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
 
