--- a/gallery7.html
+++ b/gallery7.html
@@ -151,7 +151,7 @@
 						</a>
 					</div>	
 
-					<div class="col-lg-6 col-md-4 col-sm-6">
+					<div class="col-lg-3 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/bicolor/esperance.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/bicolor/esperance.png" alt="Esperance">
@@ -161,7 +161,7 @@
 						</a>
 					</div>	
 
-					<div class="col-lg-6 col-md-4 col-sm-6">
+					<div class="col-lg-3 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/bicolor/tormenta.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/bicolor/tormenta.png" alt="Tormenta">
@@ -171,22 +171,22 @@
 						</a>
 					</div>	
 
-					<div class="col-lg-6 col-md-4 col-sm-6">
+					<div class="col-lg-3 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/bicolor/silantoi.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/bicolor/silantoi.png" alt="Silantoi">
 							<div class="blog__content text-white mb-5">
-								<h3> &nbsp; • Silantoi</h3>
+								<h3> • Silantoi</h3>
 							</div>
 						</a>
 					</div>	
 
-					<div class="col-lg-6 col-md-4 col-sm-6">
+					<div class="col-lg-3 col-md-4 col-sm-6">
 						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/bicolor/frutetto.png"
 							data-fresco-group="gallery">
 							<img src="img/gallery/bicolor/frutetto.png" alt="Frutetto">
 							<div class="blog__content text-white mb-5">
-								<h3> &nbsp; • Frutetto</h3>
+								<h3> • Frutetto</h3>
 							</div>
 						</a>
 					</div>
@@ -260,7 +260,7 @@
 					<h6 class="text-uppercase font-weight-bold"> Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 					<p><a href="gallery1.html">Red & Coral</a></p>
-					<p><a href="gallery2.html">White Roses</a></p>
+					<p><a href="gallery2.html">White & Cream</a></p>
 					<p><a href="gallery3.html">Pink & Hot Pink</a></p>
 					<p><a href="gallery4.html">Orange-Yellow & Peach</a></p>
 
