--- a/index.html
+++ b/index.html
@@ -202,11 +202,9 @@
 
 					<h3 class="font-weight-bold ">About Bella Flowers</h3>
 
-					<p class="text-muted my-3">We are a proud distributor of Circasia & Vuelven roses, with over 30
-						years’ experience in growing and exporting high quality roses directly from our farms located
-						near Bogotá, Colombia to North America, Europe, Asia and Australia. <br>
-
-						Our farms are certified Rainforest Alliance since 2009 and Sedex (SMETA) audit, We are commited to the environment and the well-being of our employees.</p>
+					<p class="text-muted my-3">We are a proud distributor of Circasia, Vuelven, Matina & Aguaclara roses, with over 30
+						years experience in growing and exporting high quality roses directly from our farms located
+						near Bogotá, Colombia to North America, Europe, Asia and Australia. Our farms are certified Rainforest Alliance since 2009 and Sedex (SMETA) audit, We are commited to the environment and the well-being of our employees.</p>
 
 					<a class="btn btn-md ml-0 text-white" href="about.html" role="button"
 						style="background-color: #d10974;">Show more</a>
